[gd_scene load_steps=4 format=3 uid="uid://dnr2fhai8myy2"]

[ext_resource type="Script" path="res://game/interact_body/interact_body.gd" id="1_e2ofs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8l7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq2d6"]
size = Vector2(15, 15)

[node name="InteractBody" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 0
collision_mask = 0
script = ExtResource("1_e2ofs")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
z_index = 10
shape = SubResource("RectangleShape2D_w8l7b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 10
shape = SubResource("RectangleShape2D_pq2d6")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_area_2d_body_exited"]
